--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,11 @@ services:
     volumes:
       - ./provisioning:/etc/grafana/provisioning
       - ./dashboards:/var/lib/grafana/dashboards
+
+
+  crowd-human-head-body:
+    image: mehran69/crowd-human-head-body
+    container_name: crowd-human-head-body
+    volumes:
+      - C:\Users\Administrator\projects\head_body_detection_yolov3\:/home/head_body_detection_yolov3/
+    tty: true
