--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,10 @@ services:
   crowd-human-head-body:
     image: mehran69/crowd-human-head-body
     container_name: crowd-human-head-body
+    working_dir: /home/head_body_detection_yolov3/
+    entrypoint: /home/head_body_detection_yolov3/init.sh
+    ports:
+      - 8000:8000
     volumes:
       - C:\Users\Administrator\projects\head_body_detection_yolov3\:/home/head_body_detection_yolov3/
     tty: true
